Disabled srcset to fix cropping, and tweaked some mobile css

--- a/wp-content/themes/bebraven/style.css
+++ b/wp-content/themes/bebraven/style.css
@@ -1206,10 +1206,12 @@ body {
 13.1 Header and Breadcrumbs
 --------------------------------------------------------------*/
 
+#page {
+	overflow: hidden;
+}
+
 #masthead {
 	position: relative;
-	overflow-x: hidden;
-	overflow-y: visible;
 }
 
 .marquee img {
@@ -2319,7 +2321,7 @@ h2.plain {
 	position: relative;
 	border: 0;
 	border-radius: 0;
-	margin: 1.5em 0;
+	margin: 1.5em auto;
 }
 
 .g-recaptcha,
@@ -2404,8 +2406,12 @@ h2.plain {
 
 	#logo {
 		top: 5vw;
-		left: 15vw;
+		left: 10vw;
 		z-index: 9999;
+	}
+
+	.mobile-nav-expanded #logo {
+		left: 17vw;
 	}
 
 	#masthead nav {
